Finished rough-draft for ODSC tutorial

--- a/ray-core/solutions/Solutions.ipynb
+++ b/ray-core/solutions/Solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,29 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-09 16:05:04,209\tINFO resource_spec.py:204 -- Starting Ray with 4.49 GiB memory available for workers and up to 2.27 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-09 16:05:04,563\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
+      "2020-04-13 15:44:56,553\tINFO resource_spec.py:212 -- Starting Ray with 4.74 GiB memory available for workers and up to 2.37 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-13 15:44:56,928\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:10675',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-09_16-05-04_200827_36742/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-09_16-05-04_200827_36742/sockets/raylet',\n",
+       " 'redis_address': '192.168.1.149:13814',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-13_15-44-56_546186_64542/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-13_15-44-56_546186_64542/sockets/raylet',\n",
        " 'webui_url': 'localhost:8266',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-09_16-05-04_200827_36742'}"
+       " 'session_dir': '/tmp/ray/session_2020-04-13_15-44-56_546186_64542'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,6 +272,300 @@
    "source": [
     "assert squares == [0, 1, 4, 9]\n",
     "assert duration < 4.1, f'duration = {duration}' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 in 04-DistributedStateWithActors\n",
+    "\n",
+    "Let's see if we can achieve better performance results than our last run. For your convenience, here are new versions of `RayGame` (called `RayGame2`) and `ConwaysRules` (called `RayConwaysRules`), both declared as actors. What about `State`? It actually _doesn't_ make sense to make it an actor, because it is really just an _immutable_ holder of data, so making it an actor is not going to bring any benefit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's redefine a few things we need from that notebook, including the exercise code we need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_size = 100\n",
+    "max_steps = 200\n",
+    "\n",
+    "def cleanup(ids):\n",
+    "    for id in ids: \n",
+    "        id.__ray_terminate__.remote()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8266\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'http://{ray.get_webui_url()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For comparison, my runs with the exercise code before improvements were about 12 to 12.5 seconds.\n",
+    "\n",
+    "If you look at `RayGame2.step`, it calls `RayConwaysRules.step` one step at a time, using remote calls. This seems like a good place for improvement. Let's extend `RayConwaysRules.step` to do more than one step, just like `RayGame2.step` already supports.\n",
+    "\n",
+    "Changes are indicated with comments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class State:\n",
+    "    \"\"\"\n",
+    "    Represents a grid of game cells.\n",
+    "    For simplicity, require square grids.\n",
+    "    Each instance is considered immutable.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, grid = None, size = 10):\n",
+    "        \"\"\"\n",
+    "        Create a State. Specify either a grid of cells or a size, for\n",
+    "        which an size x size grid will be computed with random values.\n",
+    "        (For simplicity, only use square grids.)\n",
+    "        \"\"\"\n",
+    "        if type(grid) != type(None): # avoid annoying AttributeError\n",
+    "            assert grid.shape[0] == grid.shape[1]\n",
+    "            self.size = grid.shape[0]\n",
+    "            self.grid = grid.copy()\n",
+    "        else:\n",
+    "            self.size = size\n",
+    "            # Seed: random initialization\n",
+    "            self.grid = np.random.random(size*size).reshape((size, size)).round()\n",
+    "\n",
+    "    def living_cells(self):\n",
+    "        \"\"\"\n",
+    "        Returns ([x1, x2, ...], [y1, y2, ...]) for all living cells.\n",
+    "        Simplifies graphing.\n",
+    "        \"\"\"\n",
+    "        cells = [(i,j) for i in range(self.size) for j in range(self.size) if self.grid[i][j] == 1]\n",
+    "        return zip(*cells)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        s = ' |\\n| '.join([' '.join(map(lambda x: '*' if x else ' ', self.grid[i])) for i in range(self.size)])\n",
+    "        return '| ' + s + ' |'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@ray.remote\n",
+    "class RayConwaysRules:\n",
+    "    \"\"\"\n",
+    "    Apply the rules to a state and return a new state.\n",
+    "    \"\"\"\n",
+    "    def step(self, state, num_steps = 1):\n",
+    "        \"\"\"\n",
+    "        Determine the next values for all the cells, based on the current\n",
+    "        state. Creates a new State with the changes and returns a one-elemen array\n",
+    "        of new states, supporting num_steps > 1.\n",
+    "        \"\"\"\n",
+    "        new_states = []\n",
+    "        for n in range(num_steps):\n",
+    "            new_grid = state.grid.copy()\n",
+    "            for i in range(state.size):\n",
+    "                for j in range(state.size):\n",
+    "                    lns = self.live_neighbors(i, j, state)\n",
+    "                    new_grid[i][j] = self.apply_rules(i, j, lns, state)\n",
+    "            new_states.append(State(grid = new_grid))\n",
+    "        return new_states\n",
+    "\n",
+    "    def apply_rules(self, i, j, live_neighbors, state):\n",
+    "        \"\"\"\n",
+    "        Determine next value for a cell, which could be the same.\n",
+    "        The rules for Conway's Game of Life:\n",
+    "            Any live cell with fewer than two live neighbours dies, as if by underpopulation.\n",
+    "            Any live cell with two or three live neighbours lives on to the next generation.\n",
+    "            Any live cell with more than three live neighbours dies, as if by overpopulation.\n",
+    "            Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.\n",
+    "        \"\"\"\n",
+    "        cell = state.grid[i][j]  # default value is no change in state\n",
+    "        if cell == 1:\n",
+    "            if live_neighbors < 2 or live_neighbors > 3:\n",
+    "                cell = 0\n",
+    "        elif live_neighbors == 3:\n",
+    "            cell = 1\n",
+    "        return cell\n",
+    "\n",
+    "    def live_neighbors(self, i, j, state):\n",
+    "        \"\"\"\n",
+    "        Wrap at boundaries (i.e., treat the grid as a 2-dim \"toroid\")\n",
+    "        To wrap at boundaries, when k-1=-1, that wraps itself;\n",
+    "        for k+1=state.size, we mod it (which works for -1, too)\n",
+    "        For simplicity, we count the cell itself, then subtact it\n",
+    "        \"\"\"\n",
+    "        s = state.size\n",
+    "        g = state.grid\n",
+    "        return sum([g[i2%s][j2%s] for i2 in [i-1,i,i+1] for j2 in [j-1,j,j+1]]) - g[i][j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@ray.remote\n",
+    "class RayGame2:\n",
+    "    # TODO: Game memory grows unbounded; trim older states?\n",
+    "    def __init__(self, initial_state, rules_id):\n",
+    "        self.states = [initial_state]\n",
+    "        self.rules_id = rules_id\n",
+    "\n",
+    "    def step(self, num_steps = 1):\n",
+    "        \"\"\"Take 1 or more steps, returning a list of new states.\"\"\"\n",
+    "        start_index = len(self.states)\n",
+    "        new_state_ids = self.rules_id.step.remote(self.states[-1], num_steps)\n",
+    "        self.states.extend(ray.get(new_state_ids))\n",
+    "        return self.states[start_index:-1]  # return the new states only!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_ray_games2(num_games = 10, max_steps = max_steps, batch_size = 1, grid_size = grid_size):\n",
+    "    game_ids = [RayGame2.remote(State(size = grid_size), RayConwaysRules.remote()) for i in range(num_games)]\n",
+    "    start = time.time()\n",
+    "    state_ids = []\n",
+    "    for game_id in game_ids:\n",
+    "        for i in range(int(max_steps/batch_size)):  # Do a total of max_steps game steps, which is max_steps/delta_steps\n",
+    "            state_ids.append(game_id.step.remote(batch_size))\n",
+    "    ray.get(state_ids)  # wait for everything to finish! We are ignoring what ray.get() returns, but what will it be??\n",
+    "    pd(time.time() - start, prefix = f'Total time for {num_games} games (max_steps = {max_steps}, batch_size = {batch_size})')\n",
+    "    return game_ids  # for cleanup afterwards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 12.495 seconds\n",
+      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 12.275 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "ids1 = time_ray_games2(num_games = 1, max_steps = max_steps, batch_size=1, grid_size=grid_size)\n",
+    "ids2 = time_ray_games2(num_games = 1, max_steps = max_steps, batch_size=50, grid_size=grid_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanup(ids1)\n",
+    "cleanup(ids2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sanity check; does the order of the nested looping in `time_ray_games2` make a difference? Let's see..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_ray_games3(num_games = 10, max_steps = max_steps, batch_size = 1, grid_size = grid_size):\n",
+    "    game_ids = [RayGame2.remote(State(size = grid_size), RayConwaysRules2.remote()) for i in range(num_games)]\n",
+    "    start = time.time()\n",
+    "    state_ids = []\n",
+    "    for i in range(int(max_steps/batch_size)):  # Do a total of max_steps game steps, which is max_steps/delta_steps\n",
+    "        for game_id in game_ids:\n",
+    "            state_ids.append(game_id.step.remote(batch_size))\n",
+    "    ray.get(state_ids)  # wait for everything to finish! We are ignoring what ray.get() returns, but what will it be??\n",
+    "    pd(time.time() - start, prefix = f'Total time for {num_games} games (max_steps = {max_steps}, batch_size = {batch_size})')\n",
+    "    return game_ids  # for cleanup afterwards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 12.130 seconds\n",
+      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 11.957 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "ids1 = time_ray_games3(num_games = 1, max_steps = max_steps, batch_size=1, grid_size=grid_size)\n",
+    "ids2 = time_ray_games3(num_games = 1, max_steps = max_steps, batch_size=50, grid_size=grid_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanup(ids1)\n",
+    "cleanup(ids2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No, it doesn't matter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, this didn't help. In both runs, one core was pegged, as discussed in the lesson; we are bottlenecked in `RayConwaysRules.step()`. Now let's try parallizing that. \n",
+    "\n",
+    "We saw already that must compute the evolution of the game serially, because each state depends on the previous state, so we can't parallelize that. However, each _cell_ only depends on its eight neighbors and we have a grid of cells. So, we can break up the grid into smaller grids and compute their changes in parallel.\n",
+    "\n",
+    "This is a nontrivial refactoring. This notebook will update in GitHub soon with the solution. "
    ]
   }
  ],
