--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -231,7 +231,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Tip:** You can ask Ray for this URL later if needed. Use `ray.get_webui_url()`.\n",
+    "> **Tips:** \n",
+    ">\n",
+    "> 1. You can ask Ray for this URL later if needed. Use `ray.get_webui_url()`.\n",
+    "> 2. When you exit your program, including these notebooks, `ray.shutdown()` is called ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html#ray.shutdown)). You can also call it yourself, for example if you want to restart Ray in a notebook, but not restart the whole kernel, use `ray.shutdown()` followed by `ray.init()`. The flag we're passing to `ray.init()` above doesn't actually restart Ray if we run `ray.init()` twice.\n",
     "> \n",
     "> **Note:** There are many options you can pass to `ray.init()`. See the [ray.init](https://ray.readthedocs.io/en/latest/package-ref.html#ray.init) and [configuration](https://ray.readthedocs.io/en/latest/configure.html) documentation for details, some of which we'll explore in later lessons."
    ]
