--- a/ray-core/solutions/Solutions.ipynb
+++ b/ray-core/solutions/Solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,29 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-13 15:44:56,553\tINFO resource_spec.py:212 -- Starting Ray with 4.74 GiB memory available for workers and up to 2.37 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-13 15:44:56,928\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
+      "2020-04-14 07:19:40,828\tINFO resource_spec.py:212 -- Starting Ray with 4.35 GiB memory available for workers and up to 2.2 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-14 07:19:41,181\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:13814',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-13_15-44-56_546186_64542/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-13_15-44-56_546186_64542/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8266',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-13_15-44-56_546186_64542'}"
+       " 'redis_address': '192.168.1.149:33125',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-14_07-19-40_819186_79092/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-14_07-19-40_819186_79092/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8265',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-14_07-19-40_819186_79092'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,54 +148,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Returned   2 completed tasks. (elapsed time:  2.024)\n",
+      "Returned   2 completed tasks. (elapsed time:  2.017)\n",
       "0: []\n",
-      "10: [ 3.51983479  0.94445356  3.68859664  1.26042292 -0.10789851  2.17373424\n",
-      "  3.00150713 -1.04821399  2.23492285  3.82278505]\n",
-      "Returned   1 completed tasks. (elapsed time:  5.542)\n",
-      "20: [ 1.90913868 -0.66160134  0.79828434 -1.44480661  2.23747017  0.52514003\n",
-      "  1.26983756 -1.66983646  3.123945   -0.32368274 -2.94656064  0.35264673\n",
-      "  2.46192772 -0.42426448  1.36852146 -0.84023993 -0.45143809  2.49641169\n",
-      " -3.53041769 -0.53494207]\n",
-      "Returned   2 completed tasks. (elapsed time:  8.026)\n",
-      "30: [ 0.24828713  4.48862214  2.04706808 -0.52998407 -1.84999128  1.32390107\n",
-      " -1.02822613 -1.04734946 -5.28314685 -2.68462863  2.96015075 -1.30092952\n",
-      " -1.42989006  2.99289148 -0.72597118 -0.28928593  0.59180701 -0.81810978\n",
-      "  2.94739147  2.27211834  3.07881366 -3.37212919  1.03798083  2.3012059\n",
-      "  1.60353497 -2.26633163  1.29095693  0.22765221 -0.62767614 -1.22440643]\n",
-      "40: [-1.4085726   0.60818398 -1.92229757 -2.6291242  -1.09167228  0.99462429\n",
-      " -2.13531126 -0.66930075  2.79781069 -3.28110677  3.86629895  1.2652279\n",
-      "  0.50979446  1.69605142 -1.41249838 -0.66508959  0.02602689  0.07537499\n",
-      " -2.54336273 -2.97893775  1.81482407 -0.49276231  3.70320126  2.23135102\n",
-      "  0.12104613  1.50631944  1.61010229 -1.4956513  -0.35175039 -0.5471758\n",
-      " -0.20125516  2.61606491 -3.05021843  1.89379292 -3.01715389 -3.34388373\n",
-      "  3.19240075  0.0214747  -5.03789824 -1.06368297]\n",
+      "10: [-0.44553469 -1.93479913 -3.5977004   1.9238182   4.39475763 -2.29234861\n",
+      "  0.15558072 -0.9253621  -0.76277374  2.75928495]\n",
+      "Returned   1 completed tasks. (elapsed time:  5.532)\n",
+      "20: [-1.34267102 -2.06120681  0.05251457  0.67592777  0.64237916 -1.77380716\n",
+      " -0.17278449  1.8836336   1.03791764  2.07584008  0.41470915 -0.31120551\n",
+      " -0.48290277  2.03349318 -3.58036838  2.7793085   2.22316961  3.2815568\n",
+      " -3.00447352 -1.39071692]\n",
+      "Returned   2 completed tasks. (elapsed time:  8.024)\n",
+      "30: [ 0.50489809 -1.26025978  1.90875912 -1.47413317  3.56160123 -0.02548098\n",
+      "  1.82681312  1.22907694 -0.93719539 -4.25904422  1.84724104  1.67586983\n",
+      "  2.79733789 -1.77137426 -0.34103046  0.56282364  0.48166511  5.00366035\n",
+      " -0.07997564 -2.71198896 -1.989703    0.97500589  1.70713808 -0.84229131\n",
+      "  1.13273471 -0.80687159  2.57089412  5.7337013   2.40813672  0.89270571]\n",
+      "40: [ 1.31413776  1.07380793  0.19614594  2.76340287  6.17523772 -1.0867485\n",
+      "  1.63531305 -0.40246241  0.415732   -3.75751384 -0.14257859 -2.38093862\n",
+      "  2.96220458  1.01726657 -1.61874168 -0.29634555  0.39936675 -0.06591845\n",
+      "  2.0031551   3.96643664  1.27539779  1.30864908 -3.41159412  0.70417935\n",
+      " -2.38319783 -3.72173603 -0.74922992 -0.42531303 -1.24237499 -1.89849136\n",
+      " -2.16404888 -1.95076554  1.55067811  1.06891855  1.72966587  0.46117471\n",
+      "  1.8579058   0.91857398  2.11024559 -0.26900084]\n",
       "\n",
-      "all arrays: [array([], dtype=float64), array([ 3.51983479,  0.94445356,  3.68859664,  1.26042292, -0.10789851,\n",
-      "        2.17373424,  3.00150713, -1.04821399,  2.23492285,  3.82278505]), array([ 1.90913868, -0.66160134,  0.79828434, -1.44480661,  2.23747017,\n",
-      "        0.52514003,  1.26983756, -1.66983646,  3.123945  , -0.32368274,\n",
-      "       -2.94656064,  0.35264673,  2.46192772, -0.42426448,  1.36852146,\n",
-      "       -0.84023993, -0.45143809,  2.49641169, -3.53041769, -0.53494207]), array([ 0.24828713,  4.48862214,  2.04706808, -0.52998407, -1.84999128,\n",
-      "        1.32390107, -1.02822613, -1.04734946, -5.28314685, -2.68462863,\n",
-      "        2.96015075, -1.30092952, -1.42989006,  2.99289148, -0.72597118,\n",
-      "       -0.28928593,  0.59180701, -0.81810978,  2.94739147,  2.27211834,\n",
-      "        3.07881366, -3.37212919,  1.03798083,  2.3012059 ,  1.60353497,\n",
-      "       -2.26633163,  1.29095693,  0.22765221, -0.62767614, -1.22440643]), array([-1.4085726 ,  0.60818398, -1.92229757, -2.6291242 , -1.09167228,\n",
-      "        0.99462429, -2.13531126, -0.66930075,  2.79781069, -3.28110677,\n",
-      "        3.86629895,  1.2652279 ,  0.50979446,  1.69605142, -1.41249838,\n",
-      "       -0.66508959,  0.02602689,  0.07537499, -2.54336273, -2.97893775,\n",
-      "        1.81482407, -0.49276231,  3.70320126,  2.23135102,  0.12104613,\n",
-      "        1.50631944,  1.61010229, -1.4956513 , -0.35175039, -0.5471758 ,\n",
-      "       -0.20125516,  2.61606491, -3.05021843,  1.89379292, -3.01715389,\n",
-      "       -3.34388373,  3.19240075,  0.0214747 , -5.03789824, -1.06368297])]\n",
-      "Total time: duration:  8.029 seconds\n"
+      "all arrays: [array([], dtype=float64), array([-0.44553469, -1.93479913, -3.5977004 ,  1.9238182 ,  4.39475763,\n",
+      "       -2.29234861,  0.15558072, -0.9253621 , -0.76277374,  2.75928495]), array([-1.34267102, -2.06120681,  0.05251457,  0.67592777,  0.64237916,\n",
+      "       -1.77380716, -0.17278449,  1.8836336 ,  1.03791764,  2.07584008,\n",
+      "        0.41470915, -0.31120551, -0.48290277,  2.03349318, -3.58036838,\n",
+      "        2.7793085 ,  2.22316961,  3.2815568 , -3.00447352, -1.39071692]), array([ 0.50489809, -1.26025978,  1.90875912, -1.47413317,  3.56160123,\n",
+      "       -0.02548098,  1.82681312,  1.22907694, -0.93719539, -4.25904422,\n",
+      "        1.84724104,  1.67586983,  2.79733789, -1.77137426, -0.34103046,\n",
+      "        0.56282364,  0.48166511,  5.00366035, -0.07997564, -2.71198896,\n",
+      "       -1.989703  ,  0.97500589,  1.70713808, -0.84229131,  1.13273471,\n",
+      "       -0.80687159,  2.57089412,  5.7337013 ,  2.40813672,  0.89270571]), array([ 1.31413776,  1.07380793,  0.19614594,  2.76340287,  6.17523772,\n",
+      "       -1.0867485 ,  1.63531305, -0.40246241,  0.415732  , -3.75751384,\n",
+      "       -0.14257859, -2.38093862,  2.96220458,  1.01726657, -1.61874168,\n",
+      "       -0.29634555,  0.39936675, -0.06591845,  2.0031551 ,  3.96643664,\n",
+      "        1.27539779,  1.30864908, -3.41159412,  0.70417935, -2.38319783,\n",
+      "       -3.72173603, -0.74922992, -0.42531303, -1.24237499, -1.89849136,\n",
+      "       -2.16404888, -1.95076554,  1.55067811,  1.06891855,  1.72966587,\n",
+      "        0.46117471,  1.8579058 ,  0.91857398,  2.11024559, -0.26900084])]\n",
+      "Total time: duration:  8.026 seconds\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8266\n"
+      "http://localhost:8265\n"
      ]
     }
    ],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,15 +469,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 12.495 seconds\n",
-      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 12.275 seconds\n"
+      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 11.669 seconds\n",
+      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 11.923 seconds\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,12 +505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def time_ray_games3(num_games = 10, max_steps = max_steps, batch_size = 1, grid_size = grid_size):\n",
-    "    game_ids = [RayGame2.remote(State(size = grid_size), RayConwaysRules2.remote()) for i in range(num_games)]\n",
+    "    game_ids = [RayGame2.remote(State(size = grid_size), RayConwaysRules.remote()) for i in range(num_games)]\n",
     "    start = time.time()\n",
     "    state_ids = []\n",
     "    for i in range(int(max_steps/batch_size)):  # Do a total of max_steps game steps, which is max_steps/delta_steps\n",
@@ -523,15 +523,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 12.130 seconds\n",
-      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 11.957 seconds\n"
+      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 11.158 seconds\n",
+      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 10.963 seconds\n"
      ]
     }
    ],
